--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <!-- Hi, this is Nelson. Please DELETE the <script> block below (L6-L13)
           if you use this HTML, otherwise my analytics will track your page. -->
-        <title>Hao Zou</title>
+        <title>Nelson F. Liu</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <meta property="og:url" content="https://zouhao0418.github.io/" />
-	    <meta property="og:title" content="Hao Zou" />
-	    <meta property="og:image" content="https://github.com/zouhao0418/zouhao0418.github.io/tree/master/img/me.jpg" />
+        <meta property="og:url" content="http://nelsonliu.me" />
+	    <meta property="og:title" content="Nelson F. Liu" />
+	    <meta property="og:image" content="http://nelsonliu.me/img/nelson-liu-2018.jpg" />
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="author" content="Hao Zou">
+	    <meta name="author" content="Nelson F. Liu">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 
@@ -31,10 +31,10 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 order-0 order-xs-0 order-sm-0 order-md-1 order-lg-1">
                     <div class="card mb-3">
-                        <img class="card-img-top" src="img/me.jpg" alt="Hao Zou">
+                        <img class="card-img-top" src="img/nelson-liu-2018.jpg" alt="Nelson Liu">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <b>Hao Zou</b>
+                                <b>Nelson F. Liu</b>
                             </h5>
                             <p class="card-text">
                                 PhD Student
