--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@
         <div class="container mt-5">
             <div class="row mb-3">
                 <div class="col">
-                    <h1>Nelson F. Liu</h1>
+                    <h1>Hao Zou</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 order-0 order-xs-0 order-sm-0 order-md-1 order-lg-1">
                     <div class="card mb-3">
-                        <img class="card-img-top" src="img/nelson-liu-2018.jpg" alt="Nelson Liu">
+                        <img class="card-img-top" src="img/me.jpg" alt="Hao Zou">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <b>Nelson F. Liu</b>
+                                <b>Hao Zou</b>
                             </h5>
                             <p class="card-text">
-                                PhD Student
+                                BS Student
                                 </br>
                                 Computer Science Department
                                 </br>
-                                Stanford University
-                                </br>
-                                </br>
-                                Office: Gates 252
+                                University of Minnesota, Twin Cities
+                                </br>                        
                                 </br>
                                 pronouns: he/him
                             </p>
@@ -53,49 +51,31 @@
                 </div>
                 <div class="col-lg-8 col-md-6 order-1 order-xs-1 order-sm-1 order-md-0 order-lg-0">
                     <p>
-                        Hi! I'm a first-year PhD student in computer science at
-                        Stanford University, where I work in
-                        the <a href="https://nlp.stanford.edu/"
-                        target="_blank">Natural Language Processing Group</a>.
+                        Hi! I'm a junior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
+        I work in the <a href="https://dykang.github.io/recruit.html" target="_blank">Minnesota NLP Group</a> and <a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>.
+        My advisors are <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a> and
+        <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Jaideep Srivastava</a>. Since May 2021, I was fortunate to
+        begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Jordan Boyd-Graber</a> at University of Maryland. Previously, 
+        I've also spent time at the at the <a href="http://labs.sabanciuniv.edu/spis/" target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester,
+        working with <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" target="_blank">Mujdat Cetin</a>.
                     </p>
                     <p>
-                        My research focuses on understanding and augmenting the
-                        generalizability and robustness of natural language
-                        processing systems. In general, I am interested in
-                        bridging the gap between solving individual NLP
-                        benchmarks and solving broader NLP tasks. My research is
-                        graciously supported by a
-                        <a href="https://www.nsfgrfp.org/general_resources/about"
-                        target="_blank">NSF Graduate Research Fellowship</a>.
-                    </p>
-                    <p>
-                        Previously, I spent four amazing years as an
-                        undergraduate at the University of Washington, where I
-                        worked with <a href="http://homes.cs.washington.edu/~nasmith/" target="_blank">Noah A. Smith</a>.
-                        I've also spent time at the <a href="http://allenai.org/" target="_blank">Allen Institute for
-                        Artificial Intelligence (AI2)</a> (working with <a href="http://matt-gardner.github.io/" target="_blank">Matt Gardner</a>),
-                        and the <a href="http://www.isi.edu" target="_blank">USC Information
-                        Sciences Institute</a> (working with <a href="http://www.isi.edu/~knight/" target="_blank">Kevin Knight</a> and
-                        <a href="http://www.isi.edu/~jonmay/" target="_blank">Jonathan May</a>).
-                    </p>
-                    <p>
-                        Thanks to the support of my research mentors, I was
-                        fortunate to begin working on research early in my
-                        undergraduate career. I’m happy to help ambitious
-                        undergraduate students interested in natural language
-                        processing or machine learning get started with
-                        research—please feel free to email me!
+                        My research interest includes Natural Language Processing, Machine Learning,  and Data Mining. 
+			My current research focuses on NLP and text classification, specifically, Stance Detection for political affiliation 
+			while applying concepts of weakly supervision, reinforcement learning and knowledge graph and 
+                        making sense of data in social media. Moreover, we're extremely interested in the reasons behind people's stance, 
+			then tracing back to the features of the model to create Trustworthy AI system (Explainable AI).
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <p>
-                        Email: nfliu [<a href="https://en.wikipedia.org/wiki/At_sign" target="_blank">strudel</a>] cs.stanford.edu
+                        Email: zou00080 [<a href="https://en.wikipedia.org/wiki/At_sign" target="_blank">strudel</a>] umn.edu
                     </p>
                     <p>
                         Links:
-                        [<a href="files/N_LIU_CV.pdf" target="_blank">Full CV</a>] [<a href="https://twitter.com/nelsonfliu" target="_blank">Twitter</a>] [<a href="https://github.com/nelson-liu" target="_blank">Github</a>] [<a href="https://scholar.google.com/citations?user=ghGDz7MAAAAJ&hl=en" target="_blank">Google Scholar</a>] [<a href="https://blog.nelsonliu.me/" target="_blank">Blog</a>]
+                        [<a href="files/CV-Hao%20Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/zouhao0418" target="_blank">Github</a>]
                     </p>
                 </div>
             </div>
@@ -132,17 +112,14 @@
                     <h2>Miscellany</h2>
                     <ul>
                         <li>
-                            In my free time, I like to cycle (slowly) and climb
-                            (indoors, poorly).
+                            Also interested in finance and economics: CFA Level I Candidate (passed in Summer 2019).
                         </li>
                         <li>
-                            Feel free to
-                            use <a href="https://github.com/nelson-liu/website"
-                            target="_blank">this website's source code</a>, I'd
-                            just appreciate if you linked back
-                            to this page (<a href="https://nelsonliu.me/"
-                            target="_blank">https://nelsonliu.me</a>).
+                            Fan of table games, skiing (it's Minnesota!), and biking.
                         </li>
+			<li>
+		            In my leisure time, I enjoy watching ANIME, playing piano and reading.
+			</li>
                     </ul>
                 </div>
             </div>
