--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Hi, this is Nelson. Please DELETE the <script> block below (L6-L13)
           if you use this HTML, otherwise my analytics will track your page. -->
-        <title>Nelson F. Liu</title>
+        <title>Hao Zou</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta property="og:url" content="http://nelsonliu.me" />
@@ -52,19 +52,26 @@
                 <div class="col-lg-8 col-md-6 order-1 order-xs-1 order-sm-1 order-md-0 order-lg-0">
                     <p>
                         Hi! I'm a junior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
-        I work in the <a href="https://dykang.github.io/recruit.html" target="_blank">Minnesota NLP Group</a> and <a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>.
-        My advisors are <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a> and
-        <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Jaideep Srivastava</a>. Since May 2021, I was fortunate to
-        begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Jordan Boyd-Graber</a> at University of Maryland. Previously, 
-        I've also spent time at the at the <a href="http://labs.sabanciuniv.edu/spis/" target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester,
+                        I work in the <a href="https://dykang.github.io/recruit.html" target="_blank">Minnesota NLP Group</a> and 
+			<a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>. 
+			My advisors are <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a> and
+        <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Jaideep Srivastava</a>. 
+			    Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Jordan Boyd-Graber</a> at University of Maryland. Previously, 
+        I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester,
         working with <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" target="_blank">Mujdat Cetin</a>.
                     </p>
                     <p>
-                        My research interest includes Natural Language Processing, Machine Learning,  and Data Mining. 
-			My current research focuses on NLP and text classification, specifically, Stance Detection for political affiliation 
-			while applying concepts of weakly supervision, reinforcement learning and knowledge graph and 
-                        making sense of data in social media. Moreover, we're extremely interested in the reasons behind people's stance, 
-			then tracing back to the features of the model to create Trustworthy AI system (Explainable AI).
+                        My research interests include Natural Languaguge Generation, Question Answering, and the Causal Analysis in NLP. 
+		    I'm currently working with Prof. Dongyeop Kang and focusing on Causal Analysis on Pre-trained Language Models.
+		    We are interested in finding out what cause the model to perform a syntactic generalization behavior from Causal Analysis perspective.
+	            Specifically, we are using ideology from Causal Inference such as counterfactual intervention and cauasl mediation analysis
+	            to uncover the mechanisms that underlie models’ sensitivity to syntactic bias in prompt engineering.
+		Meanwhile, I'm working with Prof. Jordan Boyd-Graber on Open-domain Question Answering (QA). 
+		    We are working on improving QA systems by synthetic questions using machine translation for question generation and conversion. 
+		    We are also trying to solve the ambiguity issue of question generation and paying attention to the interpretability of 
+		    language models. Previously, I worked with Prof. Jaideep Srivastava with the focus on Stance Detection 
+		    for political affiliation while applying concepts of weak supervision and knowledge graph for 
+		    text classification and making sense of data in social media.
                     </p>
                 </div>
             </div>
