--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>Hao Zou</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <meta property="og:url" content="http://nelsonliu.me" />
-	    <meta property="og:title" content="Nelson F. Liu" />
+        <meta property="og:url" content="https://zouhao0418.github.io/" />
+	    <meta property="og:title" content="Hao Zou" />
 	    <meta property="og:image" content="http://nelsonliu.me/img/nelson-liu-2018.jpg" />
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="author" content="Nelson F. Liu">
+	    <meta name="author" content="Hao Zou">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 
@@ -91,16 +91,9 @@
                     <h2>Recent News</h2>
                     <ul>
                         <li>
-                            (8/2019) Paper on Quoref, a new reading
-                            comprehension dataset with questions that require
-                            resolving coreference, accepted to EMNLP 2019.
-                        </li>
-                        <li>
-                            (8/2019) I'm participating in
-                            the <a href="https://cbmm.mit.edu/"
-                            target="_blank">Center for Brains, Minds, and
-                            Machines'</a> <a href="https://cbmm.mit.edu/summer-school/2019"
-                            target="_blank">summer course</a>.
+                            (8/2021) Paper on Improving Question Answering with Generation of NQ-like Questions, 
+				submitted to <a href="https://mrqa.github.io/"
+                            target="_blank">MRQA</a> 2021.
                         </li>
                     </ul>
                 </div>
