--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
                     </p>
                     <p>
                         My research interests include Natural Languaguge Generation, Question Answering, and the Causal Analysis in NLP. 
-		    I'm currently working with Prof. Dongyeop Kang and focusing on Causal Analysis on Pre-trained Language Models.
+		    I'm currently working with <a href="https://dykang.github.io/index.html#section_home" target="_blank">Prof. Dongyeop Kang</a> and 
+			    focusing on Causal Analysis on Pre-trained Language Models.
 		    We are interested in finding out what cause the model to perform a syntactic generalization behavior from Causal Analysis perspective.
 	            Specifically, we are using ideology from Causal Inference such as counterfactual intervention and cauasl mediation analysis
 	            to uncover the mechanisms that underlie models’ sensitivity to syntactic bias in prompt engineering.
-		Meanwhile, I'm working with Prof. Jordan Boyd-Graber on Open-domain Question Answering (QA). 
+		Meanwhile, I'm working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a> 
+			    on Open-domain Question Answering (QA). 
 		    We are working on improving QA systems by synthetic questions using machine translation for question generation and conversion. 
 		    We are also trying to solve the ambiguity issue of question generation and paying attention to the interpretability of 
-		    language models. Previously, I worked with Prof. Jaideep Srivastava with the focus on Stance Detection 
+		    language models. Previously, I worked with 
+			    <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Prof. Jaideep Srivastava</a>
+			    with the focus on Stance Detection 
 		    for political affiliation while applying concepts of weak supervision and knowledge graph for 
 		    text classification and making sense of data in social media.
                     </p>
@@ -131,12 +135,15 @@
                         </p>
                     </div>
                     <div class="col-6 col-md text-right">
+			    <!--
                         <a href="https://nlp.stanford.edu" class="image-link">
                             <img class="mr-4" src="img/stanford_nlp_logo.gif" alt="Stanford NLP Group logo." height="75">
                         </a>
                         <a href="http://ai.stanford.edu" class="image-link">
                             <img src="img/stanford_ai_logo.jpg" alt="Stanford AI Lab logo." height="75">
-                        </a>
+                        </a>  -->
+			    <p>"When I stand before thee at the day's end, Thou shalt see my scars and know that I had my wounds and also my healing. 
+				    -- Rabindranath Tagore"</a></p>
                     </div>
                 </div>
             </footer>
