--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                         <a href="http://ai.stanford.edu" class="image-link">
                             <img src="img/stanford_ai_logo.jpg" alt="Stanford AI Lab logo." height="75">
                         </a>  -->
-			    <p>"When I stand before thee at the day's end, Thou shalt see my scars and know that I had my wounds and also my healing. 
-				    -- Rabindranath Tagore"</a></p>
+			    <p>"When I stand before thee at the day's end, Thou shalt see my scars and know that I had my wounds and also my healing." 
+				    -- Rabindranath Tagore</a></p>
                     </div>
                 </div>
             </footer>
