--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
 			    on Open-domain Question Answering (QA). 
 		    We are working on improving QA systems by synthetic questions using machine translation for question generation and conversion. 
 		    We are also trying to solve the ambiguity issue of question generation and paying attention to the interpretability of 
-		    language models. Previously, I worked with 
-			    <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Prof. Jaideep Srivastava</a>
-			    with the focus on Stance Detection 
-		    for political affiliation while applying concepts of weak supervision and knowledge graph for 
-		    text classification and making sense of data in social media.
+		    language models.
                     </p>
+		    <p>
+			Previously, I worked with <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" target="_blank">Prof. Jaideep Srivastava</a>
+			with the focus on Stance Detection for political affiliation while applying concepts of weak supervision 
+			and knowledge graph for text classification and making sense of data in social media.
+		    </p>
                 </div>
             </div>
             <div class="row">
