--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </p>
                     <p>
                         Links:
-                        [<a href="files/CV-Hao%20Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/zouhao0418" target="_blank">Github</a>]
+                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/zouhao0418" target="_blank">Github</a>]
                     </p>
                 </div>
             </div>
@@ -96,10 +96,19 @@
                     <h2>Recent News</h2>
                     <ul>
                         <li>
-                            (8/2021) Paper on Improving Question Answering with Generation of NQ-like Questions, 
+                            (8/2021) Paper on [<a href="files/EMNLP_2021_MRQA_Paper.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
 				submitted to <a href="https://mrqa.github.io/"
                             target="_blank">MRQA</a> 2021.
                         </li>
+			<li>
+			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
+			    for course Machine Learning: Analysis and Methods (Spring 2021).
+			</li>
+			<li>
+		            (5/2021) Preprint paper on [<a href="files/HINF5610_Report.pdf" target="_blank">Text Simplification for Leadless Pacemaker Failure
+Reports in MAUDE</a>], 
+			    for course Biomedical NLP (Spring 2021).
+			</li>
                     </ul>
                 </div>
             </div>
