--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Reports in MAUDE</a>],
                     <div class="col-6 col-md text-right">
 			    <!--
                         <a href="https://nlp.stanford.edu" class="image-link">
-                            <img class="mr-4" src="img/stanford_nlp_logo.gif" alt="Stanford NLP Group logo." height="75">
+                            <img class="mr-4" src="img/umn.png" alt="Stanford NLP Group logo." height="75">
                         </a>
                         <a href="http://ai.stanford.edu" class="image-link">
                             <img src="img/stanford_ai_logo.jpg" alt="Stanford AI Lab logo." height="75">
