--- a/index.html
+++ b/index.html
@@ -113,6 +113,27 @@ Reports in MAUDE</a>],
                 </div>
             </div>
             <hr>
+
+            <div class="row" id="experience">
+                <div class="col">
+                    <h2>Experience</h2>
+			
+        <dl>
+          <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
+          <dt>Sept. 2019 - : University of Minnesota, Twin Cities</dt>
+          <dd>B.S., Computer Science</dd>
+          <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a></dd>
+          
+          <img class="img-fluid z-depth-1 rounded" src="/files/rochester.png" width='135' height='YYY'>
+          <dt>Jun. 2020 - Oct. 2020: University of Rochester, New York</dt>
+          <dd>Research Intern</dd>
+          <dd>Advisor: <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" title="Mujdat Cetin">Mujdat Cetin</a></dd>
+        </dl>
+                    
+                </div>
+            </div>
+            <hr>
+
             <div class="row" id="publications">
                 <div class="col">
                     <h2>Publications</h2>
@@ -147,7 +168,7 @@ Reports in MAUDE</a>],
                     <div class="col-6 col-md text-right">
 			    <!--
                         <a href="https://nlp.stanford.edu" class="image-link">
-                            <img class="mr-4" src="img/umn.png" alt="Stanford NLP Group logo." height="75">
+                            <img class="mr-4" src="img/stanford_nlp_logo.gif" alt="Stanford NLP Group logo." height="75">
                         </a>
                         <a href="http://ai.stanford.edu" class="image-link">
                             <img src="img/stanford_ai_logo.jpg" alt="Stanford AI Lab logo." height="75">
