--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@ Reports in MAUDE</a>],
           <dt>May. 2021 - present: University of Maryland, College Park</dt>
           <dd>Research Intern</dd>
           <dd>Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a></dd>
-	
-          <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
-          <dt>Sept. 2019 - : University of Minnesota, Twin Cities</dt>
-          <dd>B.S., Computer Science</dd>
-          <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a></dd>
           
           <img class="img-fluid z-depth-1 rounded" src="/img/rochester.png" width='135' height='YYY'>
           <dt>Jun. 2020 - Oct. 2020: University of Rochester, New York</dt>
           <dd>Research Intern</dd>
           <dd>Advisor: <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" title="Mujdat Cetin">Mujdat Cetin</a></dd>
+		
+          <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
+          <dt>Sept. 2019 - present: University of Minnesota, Twin Cities</dt>
+          <dd>B.S., Computer Science</dd>
+          <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a>, <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
         </dl>
                     
                 </div>
