--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 			with the focus on Stance Detection for political affiliation while applying concepts of weak supervision 
 			and knowledge graph for text classification and making sense of data in social media.
 		    </p>
+		    <p>
+			Thanks to the support of my research mentors, it's my grear fortunate and honor to begin working on research early in my undergraduate career with those awesome researchers!
+		    </p>
                 </div>
             </div>
             <div class="row">
