--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 			Analysis and other hieristics.
                     </p>
                     <p>		    		    
-			Since May 2021, I was fortunate to begin working with Prof.<a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Jordan 
-			Boyd-Graber</a> and Dr.<a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" target="_blank">Saptarashmi 
+			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan 
+			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" target="_blank">Dr. Saptarashmi 
 			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
 		        target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="https:
 		        //scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" target="_blank">Mujdat Cetin</a>.
@@ -135,23 +135,31 @@ Reports in MAUDE</a>],
 			
         <dl>
           <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
-          <dt>August. 2021 - present: Minnesota NLP Group</dt>
+          <dt>University of Minnesota, Twin Cities</dt>
+	  <dt>Minnesota NLP Group</dt>
+	  <dd>August. 2021 - present</dd>
           <dd>Group Member</dd>
           <dd>Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
 		
           <img class="img-fluid z-depth-1 rounded" src="/img/umd.png" width='135' height='YYY'>
-          <dt>May. 2021 - present: University of Maryland, College Park</dt>
+          <dt>University of Maryland, College Park</dt>
+	  <dt>The CLIP Laboratory</dt>
+          <dd>May. 2021 - present</dd>
           <dd>Research Intern</dd>
           <dd>Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a></dd>
           
           <img class="img-fluid z-depth-1 rounded" src="/img/rochester.png" width='135' height='YYY'>
-          <dt>Jun. 2020 - Oct. 2020: University of Rochester, New York</dt>
+          <dt>University of Rochester, New York</dt>
+	  <dt><a href="http://labs.sabanciuniv.edu/spis/" 
+		        target="_blank">Signal Processing and Information Systems Laboratory</a></dt>
+	  <dd>Jun. 2020 - Oct. 2020</dd>
           <dd>Research Intern</dd>
           <dd>Advisor: <a href="https://scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" title="Mujdat Cetin">Mujdat Cetin</a></dd>
 		
           <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
-          <dt>Sept. 2019 - present: University of Minnesota, Twin Cities</dt>
-          <dd>B.S., Computer Science</dd>
+          <dt>University of Minnesota, Twin Cities</dt>
+	  <dd>Sept. 2020 - Aug. 2021</dd>
+          <dd>Group Member</dd>
           <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a>, <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
         </dl>
                     
