--- a/index.html
+++ b/index.html
@@ -137,14 +137,16 @@ Reports in MAUDE</a>],
           <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
-	  <dt>Minnesota NLP Group</dt>
+	  <dt><a href="https://dykang.github.io/not.html" 
+		        target="_blank">Minnesota NLP Group</a></dt>
 	  <dd>August. 2021 - present</dd>
           <dd>Advisor: <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
 		
           <img class="img-fluid z-depth-1 rounded" src="/img/umd.png" width='135' height='YYY'>
 	  <dd>Research Intern</dd>
           <dt>University of Maryland, College Park</dt>
-	  <dt>The CLIP Laboratory</dt>
+	  <dt><a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" 
+		        target="_blank">CLIP Laboratory</a></dt>
           <dd>May. 2021 - present</dd>
           <dd>Advisor: <a href="http://users.umiacs.umd.edu/~jbg/" title="Jordan Boyd-Graber">Jordan Boyd-Graber</a></dd>
           
@@ -159,8 +161,10 @@ Reports in MAUDE</a>],
           <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
+	  <dt><a href="http://dmr.cs.umn.edu/" 
+		        target="_blank">DMR Lab</a></dt>
 	  <dd>Sept. 2020 - Aug. 2021</dd> 
-          <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a>, <a href="https://dykang.github.io/index.html#section_group" title="Dongyeop Kand">Dongyeop Kang</a></dd>
+          <dd>Advisor: <a href="https://scholar.google.com/citations?user=Y4J5SOwAAAAJ&hl=en" title="Jaideep Srivastava">Jaideep Srivastava</a></dd>
         </dl>
                     
                 </div>
