--- a/index.html
+++ b/index.html
@@ -202,14 +202,13 @@ Reports in MAUDE</a>],
                             © Nelson Liu, 2020
                         </p>
                     </div>
-                    <div class="col-6 col-md text-right">
-			    <!--
+                    <div class="col-6 col-md text-right">		   
                         <a href="https://nlp.stanford.edu" class="image-link">
-                            <img class="mr-4" src="img/stanford_nlp_logo.gif" alt="Stanford NLP Group logo." height="75">
+                            <img class="mr-4" src="img/UMN_NLP_logo_final_circle.png" alt="Stanford NLP Group logo." height="75">
                         </a>
                         <a href="http://ai.stanford.edu" class="image-link">
-                            <img src="img/stanford_ai_logo.jpg" alt="Stanford AI Lab logo." height="75">
-                        </a>  -->
+                            <img src="img/UMN_NLP_logo_final_horizontal_transparent.png" alt="Stanford AI Lab logo." height="75">
+                        </a> 
 			    <p>"When I stand before thee at the day's end, Thou shalt see my scars and know that I had my wounds and also my healing." 
 				    -- Rabindranath Tagore</a></p>
                     </div>
