--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Reports in MAUDE</a>],
                     <h2>Experience</h2>
 			
         <dl>
-          <img class="img-fluid z-depth-1 rounded" src="/img/umn.png" width='135' height='YYY'>
+          <img class="img-fluid z-depth-1 rounded" src="/img/UMN_NLP_logo_final_circle.png" width='135' height='YYY'>
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dt><a href="https://dykang.github.io/not.html" 
