--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Reports in MAUDE</a>],
                     <h2>Experience</h2>
 			
         <dl>
-          <img class="img-fluid z-depth-1 rounded" src="/img/UMN_NLP_logo_final_vertical_transparent.jpg" width='135' height='YYY'>
+          <img class="img-fluid z-depth-1 rounded" src="/img/UMN_NLP_logo_final_circle.png" width='135' height='YYY'>
 	  <dd>Group Member</dd>
           <dt>University of Minnesota, Twin Cities</dt>
 	  <dt><a href="https://dykang.github.io/not.html" 
@@ -206,10 +206,11 @@ Reports in MAUDE</a>],
 			    <!--
                         <a href="https://nlp.stanford.edu" class="image-link">
                             <img class="mr-4" src="img/UMN_NLP_logo_final_circle.png" alt="Stanford NLP Group logo." height="75">
-                        </a> -->
+                        </a> 
                         <a href="http://ai.stanford.edu" class="image-link">
                             <img src="img/UMN_NLP_logo_final_horizontal_transparent.png" alt="Minnesota NLP Lab logo." height="75">
                         </a> 
+				-->
 			    <p>"When I stand before thee at the day's end, Thou shalt see my scars and know that I had my wounds and also my healing." 
 				    -- Rabindranath Tagore</a></p>
                     </div>
