--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			My research interests include Natural Languaguge Generation, Open-domain Question Answering, and the Causal Analysis
 			in Pre-trained Language Models. My research focuses on understanding and augmenting the generalizability and robustness 
 			of natural language processing systems. In general, I'm insterested in solving Domain Shifting issues in NLP from Causal 
-			Analysis perspectives and other hieristics.
+			Analysis perspectives and linguistics heuristics.
                     </p>
                     <p>		    		    
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan 
