--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Reports in MAUDE</a>],
                     <h2>Miscellany</h2>
                     <ul>
                         <li>
-                            Also interested in finance and economics: CFA Level I Candidate (passed in Summer 2019).
+                            Also interested in finance and economics: CFA Level I Candidate.
                         </li>
                         <li>
                             Fan of table games, skiing (it's Minnesota!), and biking.
