--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Hao Zou</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <meta property="og:url" content="https://zouhao0418.github.io/" />
+        <meta property="og:url" content="https://haozooou.github.io/" />
 	    <meta property="og:title" content="Hao Zou" />
 	    <meta property="og:image" content="http://nelsonliu.me/img/nelson-liu-2018.jpg" />
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -102,7 +102,7 @@
                     </p>
                     <p>
                         Links:
-                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/zouhao0418" target="_blank">Github</a>]
+                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozooou" target="_blank">Github</a>]
                     </p>
                 </div>
             </div>
