--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Hao Zou</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <meta property="og:url" content="https://haozooou.github.io/" />
+        <meta property="og:url" content="https://haozou-official.github.io/" />
 	    <meta property="og:title" content="Hao Zou" />
 	    <meta property="og:image" content="http://nelsonliu.me/img/nelson-liu-2018.jpg" />
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-lg-8 col-md-6 order-1 order-xs-1 order-sm-1 order-md-0 order-lg-0">
                     <p>
-                        Hi! I'm a junior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
+                        Hi! I'm a Senior undergraduate student in Computer Science at University of Minnesota, Twin Cities (UMN), where
                         I work in the <a href="https://dykang.github.io/recruit.html" target="_blank">Minnesota NLP Group</a> and 
 			<a href="http://dmr.cs.umn.edu/" target="_blank">UMN Data Analysis and Management Research Group</a>. My advisors 
 			are <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a> and
@@ -102,7 +102,7 @@
                     </p>
                     <p>
                         Links:
-                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozooou" target="_blank">Github</a>]
+                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozou-official" target="_blank">Github</a>]
                     </p>
                 </div>
             </div>
