--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 			of natural language processing systems. In general, I'm insterested in solving Domain Shifting issues in NLP from Causal 
 			Analysis perspectives and linguistics heuristics.
                     </p>
+		    <p>
+		        In order to get more insights about Deep Learning mechanisms and better combine applications with foundational theories, 
+			I started working with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> at 
+			University of Pennsylvania on a tiny project about foundational Deep Learning since May 2022. 
+		    </p>
                     <p>		    		    
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan 
 			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" target="_blank">Dr. Saptarashmi 
