--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 			Since May 2021, I was fortunate to begin working with <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan 
 			Boyd-Graber</a> and <a href="https://scholar.google.co.in/citations?user=UqTGV4gAAAAJ&hl=en" target="_blank">Dr. Saptarashmi 
 			Bandyopadhyay</a> at University of Maryland. Previously, I've also spent time at the <a href="http://labs.sabanciuniv.edu/spis/" 
-		        target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="https:
-		        //scholar.google.com/citations?user=nq7tuDkAAAAJ&hl=en" target="_blank">Mujdat Cetin</a>.
+		        target="_blank">Signal Processing and Information Systems Laboratory</a>, University of Rochester, working with <a href="http://www.hajim.rochester.edu/ece/people/faculty/cetin_mujdat/index.html" target="_blank">Mujdat Cetin</a>.
                     </p>
 			<!--
                     <p>
