--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </p>
                     <p>
                         Links:
-                        [<a href="files/CV_Hao_Zou.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozou-official" target="_blank">Github</a>]
+                        [<a href="files/cv.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozou-official" target="_blank">Github</a>]
                     </p>
                 </div>
             </div>
