--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@
                         </li>
 			<li>
 			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
-			    for course Machine Learning: Analysis and Methods (Spring 2021).
+			    for course Machine Learning: Analysis and Methods, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Spring 2021).
 			</li>
 			<li>
 		            (5/2021) Preprint paper on [<a href="files/HINF5610_Report.pdf" target="_blank">Text Simplification for Leadless Pacemaker Failure
-Reports in MAUDE</a>], 
-			    for course Biomedical NLP (Spring 2021).
+Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.edu/" target="_blank">Prof. Ju Sun</a> (Spring 2021).
+			</li>
+			    (12/2020) Preprint paper on [<a href="files/A_Conceptual_Framework_for_Clinical_Note_Analysis.pdf" target="_blank">A Conceptual Framework for Clinical Note Analysis</a>], 
+			    for course Think Deep Learning, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Fall 2020).
+			<li>
 			</li>
                     </ul>
                 </div>
