--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 			and trustworthy systems that can communicate effectively with humans and learn from human guidance and controls. 
 
                         These interests and goals have drawn me toward three main research directions: 
-			(1) Diffusion Models for compositional controllable generations and adversarial robustness; 
-			(2) Causality in NLP; 
-			(3) Understanding Adversarial Examples.
+			<br>(1) Diffusion Models for compositional controllable generations and adversarial robustness; 
+			<br>(2) Causality in NLP; 
+			<br>(3) Understanding Adversarial Examples.
 			    
 			<!-- My research interests include Natural Languaguge Generation, Open-domain Question Answering, and the Causal Analysis
 			in Pre-trained Language Models. My research focuses on understanding and augmenting the generalizability and robustness 
