--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			</li>
 			<li>
 		            (5/2021) Preprint paper on [<a href="files/HINF5610_Report.pdf" target="_blank">Text Simplification for Leadless Pacemaker Failure
-Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.edu/" target="_blank">Prof. Ju Sun</a> (Spring 2021).
+Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.edu/" target="_blank">Prof. Rui Zhang</a> (Spring 2021).
 			</li>
 			<li>
 		            (12/2020) Preprint paper on [<a href="files/A_Conceptual_Framework_for_Clinical_Note_Analysis.pdf" target="_blank">A Conceptual Framework for Clinical Note Analysis</a>], 
