--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@
                     <h2>Recent News</h2>
                     <ul>
                         <li>
-                            (8/2021) Paper on [<a href="files/EMNLP_2021_MRQA_Paper.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
-				submitted to <a href="https://mrqa.github.io/"
-                            target="_blank">MRQA</a> 2021.
+                            (8/2021) Paper on [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
+				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA</a> 2021.
                         </li>
 			<li>
 			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
@@ -195,7 +194,8 @@ Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.e
                 <div class="col">
                     <h2>Publications</h2>
                     <h3>2021</h3>
-                    
+                        [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
+				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA</a> 2021.
                 </div>
             </div>
             <hr>
