--- a/index.html
+++ b/index.html
@@ -127,9 +127,24 @@
                 <div class="col">
                     <h2>Recent News</h2>
                     <ul>
+			<li>
+		            (10/2022) Paper on Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
+				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+			</li>
+			<li>
+		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
+				Training QA Systems on Transformed Trivia Questions</a>], 
+				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
+			</li>
+			<li>
+			    Started working with 
+			</li>
+			<li>
+		            Joined 
+			</li>
                         <li>
                             (8/2021) Paper on [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
-				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA</a> 2021.
+				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
                         </li>
 			<li>
 			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
@@ -193,9 +208,15 @@ Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.e
             <div class="row" id="publications">
                 <div class="col">
                     <h2>Publications</h2>
+		    <h3>2022</h3>
+		      Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
+				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+		      <a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
+				Training QA Systems on Transformed Trivia Questions</a>], 
+				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
                     <h3>2021</h3>
-                        [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
-				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA</a> 2021.
+                      <a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>, 
+				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
                 </div>
             </div>
             <hr>
