--- a/index.html
+++ b/index.html
@@ -117,9 +117,14 @@
                     <p>
                         Email: zou00080 [<a href="https://en.wikipedia.org/wiki/At_sign" target="_blank">strudel</a>] umn.edu
                     </p>
+		    <p>
+		        Find me on <a href="https://www.linkedin.com/in/hao-zou-05b447248/" target="_blank">LinkedIn</a>,
+			<a href="https://twitter.com/haozou_" target="_blank">Twitter</a>,
+			<a href="https://github.com/haozou-official" target="_blank">Github</a>.
+		    </p>
                     <p>
-                        Links:
-                        [<a href="files/cv.pdf" target="_blank">Full CV</a>] [<a href="https://github.com/haozou-official" target="_blank">Github</a>]
+                        Check my most recent CV
+                        <a href="files/cv.pdf" target="_blank">here</a>.
                     </p>
                 </div>
             </div>
@@ -129,34 +134,40 @@
                     <ul>
 			<li>
 		            (10/2022) Paper on Debiasing Language Models for In-Context Learning by Adapting Causal Inference, 
-				submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
+			    submitted to <a href="https://2023.eacl.org/" target="_blank">EACL 2023</a>.
 			</li>
 			<li>
 		            (6/2022) Paper on [<a href="files/qb2nq_EMNLP_2022_Proceedings_QA_MT_arXiv.pdf" target="_blank">You Make me Feel like a Natural Question: 
-				Training QA Systems on Transformed Trivia Questions</a>], 
-				submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
+			    Training QA Systems on Transformed Trivia Questions</a>], 
+			    submitted to <a href="https://2022.emnlp.org/" target="_blank">EMNLP 2022</a>.
 			</li>
 			<li>
-			    Started working with 
+			    (5/2022) Started working with <a href="http://stat.wharton.upenn.edu/~suw/" target="_blank">Prof. Weijie Su</a> as
+		            Research Assistant at UPenn!
 			</li>
 			<li>
-		            Joined 
+		            (8/2021) Joined <a href="http://cs-u-ada.cs.umn.edu/team/" target="_blank">Minnesota NLP Group</a>
+			    under <a href="https://dykang.github.io/index.html#section_home" target="_blank">Dongyeop Kang</a>!
 			</li>
                         <li>
                             (8/2021) Paper on [<a href="https://arxiv.org/pdf/2210.06599.pdf" target="_blank">Improving Question Answering with Generation of NQ-like Questions</a>], 
-				submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
+			    submitted to <a href="https://mrqa.github.io/" target="_blank">MRQA 2021</a>.
                         </li>
 			<li>
+			    (5/2021) Accepted in Internship program at <a href="https://wiki.umiacs.umd.edu/clip/index.php/Main_Page" target="_blank">CLIP</a>
+			    Lab under <a href="http://users.umiacs.umd.edu/~jbg/" target="_blank">Prof. Jordan Boyd-Graber</a>.
+			</li>
+			<li>
 			    (5/2021) Preprint paper on [<a href="files/CSCI_5525_Project.pdf" target="_blank">A Survey of Causality in Visual Question Answering</a>], 
-			    for course Machine Learning: Analysis and Methods, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Spring 2021).
+			    for Grad course Machine Learning: Analysis and Methods, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Spring 2021).
 			</li>
 			<li>
 		            (5/2021) Preprint paper on [<a href="files/HINF5610_Report.pdf" target="_blank">Text Simplification for Leadless Pacemaker Failure
-Reports in MAUDE</a>], for course Biomedical NLP <a href="https://ruizhang.umn.edu/" target="_blank">Prof. Rui Zhang</a> (Spring 2021).
+Reports in MAUDE</a>], for Grad course Biomedical NLP, <a href="https://ruizhang.umn.edu/" target="_blank">Prof. Rui Zhang</a> (Spring 2021).
 			</li>
 			<li>
 		            (12/2020) Preprint paper on [<a href="files/A_Conceptual_Framework_for_Clinical_Note_Analysis.pdf" target="_blank">A Conceptual Framework for Clinical Note Analysis</a>], 
-			    for course Think Deep Learning, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Fall 2020).
+			    for Grad course Think Deep Learning, <a href="https://sunju.org/" target="_blank">Prof. Ju Sun</a> (Fall 2020).
 			</li>
                     </ul>
                 </div>
