--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
             </div>
             <div class="row">
                 <div class="col">
+                <p align=center>
+                  <a href="mailto:zou00080@umn.edu" ><i class="fa fa-envelope"></i> Email</a> &nbsp/&nbsp
+                  <a href="files/cv.pdf" ><i class="fa fa-file-pdf-o"></i> CV</a> &nbsp/&nbsp
+                  <a href="https://www.linkedin.com/in/hao-zou-05b447248/" > <i class="fa fa-linkedin"></i> LinkedIn </a> &nbsp/&nbsp
+                  <a href="https://github.com/haozou-official" > <i class="fa fa-github"></i> GitHub </a> &nbsp/&nbsp
+                </p>
+		<!--
                     <p>
                         Email: zou00080 [<a href="https://en.wikipedia.org/wiki/At_sign" target="_blank">strudel</a>] umn.edu
                     </p>
@@ -126,6 +133,7 @@
                         Check my most recent CV
                         <a href="files/cv.pdf" target="_blank">here</a>.
                     </p>
+                -->
                 </div>
             </div>
             <div class="row">
